[gd_scene load_steps=20 format=2]

[ext_resource path="res://Components/death_spawn/death_spawn.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/player/Player.gd" type="Script" id=2]
[ext_resource path="res://Components/hurtbox/hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Components/stats/stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/player_controlled/playerControlled.tscn" type="PackedScene" id=5]
[ext_resource path="res://Components/sprite/entity_sprite.tscn" type="PackedScene" id=6]
[ext_resource path="res://Components/health_bar/healthBar.tscn" type="PackedScene" id=7]
[ext_resource path="res://Components/entity_push/entityPush.tscn" type="PackedScene" id=8]
[ext_resource path="res://Components/hit_spawn/hit_spawn.tscn" type="PackedScene" id=9]
[ext_resource path="res://Entities/player/player.png" type="Texture" id=10]
[ext_resource path="res://Misc/footstep_grass.wav" type="AudioStream" id=11]
[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=12]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true

[sub_resource type="CircleShape2D" id=2]
radius = 6.03636

[sub_resource type="CircleShape2D" id=3]
radius = 3.5

[sub_resource type="CircleShape2D" id=4]

[sub_resource type="Animation" id=5]
resource_name = "dash"
length = 0.35
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.02, 0.22 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.12, 0.88 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ), Vector2( 1.05, 0.95 ), Vector2( 0.95, 1.05 ) ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("AudioStreamPlayer2D")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 11 )
} ],
"times": PoolRealArray( 0, 0.31 )
}

[sub_resource type="Animation" id=7]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[node name="player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
ACCELERATION = 600
truName = "player"
faction = "player"
dash_strength = 170

[node name="stats" parent="." instance=ExtResource( 4 )]
MAX_HEALTH = 5
HEALTH = 5
DAMAGE = 0

[node name="sprite" parent="." instance=ExtResource( 6 )]
material = SubResource( 1 )
texture = ExtResource( 10 )
vframes = 2
hframes = 4
frame = 2

[node name="playerControlled" parent="." instance=ExtResource( 5 )]

[node name="hurtbox" parent="." instance=ExtResource( 3 )]
visible = false

[node name="CollisionShape2D" parent="hurtbox" index="0"]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="healthBar" parent="." instance=ExtResource( 7 )]
margin_left = -10.2072
margin_top = -12.2674
margin_right = 10.7928
margin_bottom = -8.26565

[node name="entityPush" parent="." instance=ExtResource( 8 )]
visible = false

[node name="CollisionShape2D" parent="entityPush" index="0"]
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dash = SubResource( 5 )
anims/run = SubResource( 6 )
anims/stand = SubResource( 7 )

[node name="dash_cooldown" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="hit_spawn" parent="." instance=ExtResource( 9 )]
spawn_entity = "hit_effect"

[node name="death_spawn" parent="." instance=ExtResource( 1 )]
spawn_entity = "Hit_Effect"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="sound_player" parent="." instance=ExtResource( 12 )]
FREE_WHEN_EMPTY = false
[connection signal="health_changed" from="stats" to="." method="_on_stats_health_changed"]

[editable path="hurtbox"]

[editable path="entityPush"]
